# offlineplayer

./: .gitignore  Dockerfile  README.md  __init__.py  album.json  docker-compose,yaml  docker-compose.yaml  pyproject.toml  requirements.txt  token.json
offlineplayer/: Dockerfile  api_token.py  downloader.py  example.env  helper.py  main.py  old_recommendations.py  player.py  player_api.py  playlist.py  queue.py  recommendations.py  search.py  session.py  song.py  song_queue.py  spotify_api.py  subsonic_api.py
offlineplayer/classes/: session.py  song.py
offlineplayer/models/: recommendation.py  session.py
test/: test_jellyfin.py  test_moviepy.py  test_player_api.py  test_recommendations.py  test_spotify_api.py
