[tool.poetry]
name = "offlineplayer"
version = "0.1.0"
description = ""
authors = ["GladeOwl <owloftheglade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydub = "^0.25.1"
rich = {extras = ["all"], version = "^13.7.1"}
xmltodict = "^0.13.0"
youtube-search = "^2.1.2"
pytube = "^15.0.0"
mutagen = "^1.47.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
